--- a/docs/알고리즘 정리/최단경로/다익스트라.md
+++ b/docs/알고리즘 정리/최단경로/다익스트라.md
@@ -8,6 +8,7 @@
 - 그리디 방식으로 동작하기 때문에
   - 최소 거리에 최소 거리를 붙여가면서 경로를 탐색
   - 방문처리를 했을 때보다 더 빠른 경로가 없을 것, 불필요한 재방문을 방지하기 위해 visited 배열을 둠
+    - 하지만, 다른 경로로 갈 때 더 빠를 수 있으니까 visited 두지 않기
   - visited 없애면 음수 가중치 했을 때의 최단 경로도 구할 수 있지않을까? 
     - 만약, 음수 가중치에 순환이 있다면 무한 루프에 빠질 수 있다. 
 - 위의 그래프 를 사용하는 경우, A &rarr; B &rarr; C 의 경로를 찾지 못함
@@ -25,7 +26,6 @@ import java.util.StringTokenizer;
 
 public class Main {
   static ArrayList<Node>[] graph;
-  static boolean[] visited;
   static int[] dist;
   static int INF = Integer.MAX_VALUE;
 
@@ -43,14 +43,12 @@ public class Main {
     StringTokenizer st;
     int v, w, cost;
     for (int i = 0; i < M; i++) {
-      st = new StringTokenizer(br.readLine());
-      v = Integer.parseInt(st.nextToken());
-      w = Integer.parseInt(st.nextToken());
-      cost = Integer.parseInt(st.nextToken());
-      graph[v].add(new Node(w, cost));
+        st = new StringTokenizer(br.readLine());
+        v = Integer.parseInt(st.nextToken());
+        w = Integer.parseInt(st.nextToken());
+        cost = Integer.parseInt(st.nextToken());
+        graph[v].add(new Node(w, cost));
     }
-
-    visited = new boolean[N + 1];
     dist = new int[N + 1];
     Arrays.fill(dist, INF);
 
@@ -67,9 +65,7 @@ public class Main {
     while (!pq.isEmpty()) {
       Node current = pq.poll();
       int nowVertex = current.index;
-
-      if (visited[nowVertex]) continue;
-      visited[nowVertex] = true;
+      
 
       for (Node next : graph[nowVertex]) {
         if (dist[next.index] > dist[nowVertex] + next.cost) {
